--- a/quality_control_issue/views/qc_problem_track_view.xml
+++ b/quality_control_issue/views/qc_problem_track_view.xml
@@ -36,6 +36,8 @@
                         </group>
                         <group>
                             <field name="qc_team_id" widget="selection"/>
+                            <field name="company_id"
+                                   groups="base.group_multi_company"/>
                         </group>
                     </group>
                     <notebook>
