--- a/quality_control_issue/views/qc_issue_view.xml
+++ b/quality_control_issue/views/qc_issue_view.xml
@@ -33,8 +33,9 @@
                     <button name="action_cancel"
                             type="object" states="new,progress"
                             string="Cancel"/>
-                    <field name="state" widget="statusbar"
-                           statusbar_visible="new,progress,done"/>
+                    <field name="stage_id" widget="statusbar" clickable="True"
+                           options="{'fold_field': 'fold'}"
+                           domain="['|', ('qc_team_id', '=', qc_team_id), ('qc_team_id', '=', False)]"/>
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
@@ -52,6 +53,8 @@
                             <field name="responsible_id"/>
                             <field name="company_id"
                                    groups="base.group_multi_company"/>
+                            <field name="qc_team_id" widget="selection"/>
+                            <field name="state"/>
                         </group>
                         <group>
                             <field name="lot_id"
@@ -68,7 +71,7 @@
                         </group>
                     </group>
                     <group name="bottom">
-                        <field name="problem_track_ids" widget="many2many_tags"/>
+                        <field name="qc_problem_ids" widget="many2many_tags"/>
                         <field name="description"/>
                     </group>
                 </sheet>
@@ -80,12 +83,84 @@
         </field>
     </record>
 
+    <record id="qc_issue_kanban_view" model="ir.ui.view">
+        <field name="name">qc.issue.kanban</field>
+        <field name="model">qc.issue</field>
+        <field name="arch" type="xml">
+            <kanban class="o_kanban_small_column" default_group_by="stage_id">
+                <field name="stage_id"/>
+                <field name="color"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div t-attf-class="#{kanban_color(record.color.raw_value)} oe_kanban_global_click">
+                            <div class="o_dropdown_kanban dropdown">
+
+                                <a class="dropdown-toggle btn" data-toggle="dropdown" href="#" >
+                                    <span class="fa fa-bars fa-lg"/>
+                                </a>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                    <t t-if="widget.editable"><li><a type="edit">Edit</a></li></t>
+                                    <t t-if="widget.deletable"><li><a type="delete">Delete</a></li></t>
+                                    <li><ul class="oe_kanban_colorpicker" data-field="color"/></li>
+                                </ul>
+                            </div>
+                            <div class="oe_kanban_content">
+                                <div>
+                                    <strong><field name="name"/></strong>
+                                </div>
+                                Product: <field name="product_id"/><br></br>
+                                Qty: <field name="product_qty"/> <field name="product_uom"/><br></br>
+                                Location: <field name="location_id"/>
+                                <t t-if="record.qc_problem_ids"><br></br>
+                                Problems:
+                                <t t-foreach="record.qc_problem_ids.raw_value" t-as="rec">
+                                    <t t-esc="rec"/>;
+                                </t></t>
+                                <div class="o_kanban_footer">
+                                    <!--To be inhereted.-->
+                                </div>
+                            </div>
+                            <div class="oe_clear"></div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="qc_issue_search">
+        <field name="name">qc.issue.serch</field>
+        <field name="model">qc.issue</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="qc_team_id"/>
+                <field name="stage_id"/>
+                <field name="product_id"/>
+                <field name="location_id"/>
+                <filter string="My inspections"
+                        domain="[('inspector_id', '=', uid)]"/>
+                <group expand="0" string="Group By...">
+                    <filter string="Stage" domain="[]"
+                            context="{'group_by':'stage_id'}"/>
+                    <filter string="Problem Group" domain="[]"
+                            context="{'group_by': 'problem_group_id'}"/>
+                    <filter string="Product" domain="[]"
+                            context="{'group_by': 'product_id'}"/>
+                    <filter string="Location" domain="[]"
+                            context="{'group_by': 'location_id'}"/>
+                    <filter string="Company" context="{'group_by':'company_id'}"
+                            groups="base.group_multi_company"/>
+                </group>
+            </search>
+        </field>
+    </record>
+
     <record id="qc_issue_action" model="ir.actions.act_window">
         <field name="name">QC Issues</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">qc.issue</field>
         <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
     </record>
 
     <menuitem id="menu_qc_issue"
